# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#     http://www.apache.org/licenses/LICENSE-2.0
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/test.gni")

group("lite_graphic_utils_test") {
  if (ohos_build_type == "debug") {
    deps = [
      ":graphic_test_color",
      ":graphic_test_container",
      ":graphic_test_geometry2d",
      ":graphic_test_math",
      ":graphic_test_style",
    ]
  }
}

config("lite_graphic_utils_test_config") {
  include_dirs = []
  ldflags = [
    "-lstdc++",
    "-Wl,-rpath-link=$ohos_root_path/$root_out_dir",
  ]
}

if (ohos_build_type == "debug") {
  unittest("graphic_test_color") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/graphic"
    deps = [ "//foundation/graphic/utils:graphic_utils" ]
    configs = [ ":lite_graphic_utils_test_config" ]
    sources = [ "color_unit_test.cpp" ]
  }

  unittest("graphic_test_style") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/graphic"
    deps = [ "//foundation/graphic/utils:graphic_utils" ]
    configs = [ ":lite_graphic_utils_test_config" ]
    include_dirs = [ "//foundation/graphic/ui/interfaces/kits" ]
    sources = [ "style_unit_test.cpp" ]
  }

  unittest("graphic_test_geometry2d") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/graphic"
    deps = [ "//foundation/graphic/utils:graphic_utils" ]
    configs = [ ":lite_graphic_utils_test_config" ]
    sources = [
      "geometry2d_unit_test.cpp",
      "rect_unit_test.cpp",
    ]
  }

  unittest("graphic_test_container") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/graphic"
    deps = [ "//foundation/graphic/utils:graphic_utils" ]
    configs = [ ":lite_graphic_utils_test_config" ]
    sources = [
      "list_unit_test.cpp",
      "vector_unit_test.cpp",
    ]
  }

  unittest("graphic_test_math") {
    output_extension = "bin"
    output_dir = "$root_out_dir/test/unittest/graphic"
    deps = [ "//foundation/graphic/utils:graphic_utils" ]
    configs = [ ":lite_graphic_utils_test_config" ]
    sources = [ "graphic_math_unit_test.cpp" ]
  }
}
