# Copyright (c) 2020 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/subsystem/aafwk/path.gni")
import("//build/lite/ndk/ndk.gni")

if (ohos_build_compiler == "clang") {
  copy("display_layer") {
    sources = [ "${board_name}/llvm/libdisplay_layer.so" ]
    outputs = [ "$root_out_dir/libdisplay_layer.so" ]
  }

  copy("display_gfx") {
    sources = [ "${board_name}/llvm/libdisplay_gfx.so" ]
    outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
  }

  copy("display_gralloc") {
    sources = [ "${board_name}/llvm/libdisplay_gralloc.so" ]
    outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
  }
}

if (ohos_build_ndk_target_host == "linux-x86_64" &&
    ohos_build_compiler == "gcc") {
  copy("display_layer") {
    sources = [ "${board_name}/gcc/libdisplay_layer.so" ]
    outputs = [ "$root_out_dir/libdisplay_layer.so" ]
  }

  copy("display_gfx") {
    sources = [ "${board_name}/gcc/libdisplay_gfx.so" ]
    outputs = [ "$root_out_dir/libdisplay_gfx.so" ]
  }

  copy("display_gralloc") {
    sources = [ "${board_name}/gcc/libdisplay_gralloc.so" ]
    outputs = [ "$root_out_dir/libdisplay_gralloc.so" ]
  }
}

group("hdi_display") {
  deps = [
    ":display_gfx",
    ":display_gralloc",
    ":display_layer",
  ]
  if ((board_name == "hi3516dv300" || board_name == "hispark_taurus") &&
      ohos_kernel_type == "liteos_a") {
    deps += [ "//device/hisilicon/build/hi3516dv300:hi3516dv300_image" ]
  } else if (board_name == "hispark_taurus" && ohos_kernel_type == "linux") {
    deps += [ "//vendor/hisi/camera/dvkit_product/linux/hi3516dv300/Hi3516CV500_SDK_V2.0.3.0:linux_kernel" ]
  } else if ((board_name == "hi3518ev300" || board_name == "hispark_aries") &&
             ohos_kernel_type == "liteos_a") {
    deps += [ "//device/hisilicon/build/hi3518ev300:hi3518ev300_make_kernel" ]
  } else if (board_name == "aegis_hi3516dv300" &&
             ohos_kernel_type == "liteos_a") {
    deps +=
        [ "//device/hisilicon/aegis_hi3516dv300/build:aegis_hi3516dv300_image" ]
  }
}
