# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

java_library("distribute_testfwk_java") {
  java_files = [
    "./src/ohos/junit/distribute/CommonUtil.java",
    "./src/ohos/junit/distribute/DeviceEnum.java",
    "./src/ohos/junit/distribute/DistributeConsts.java",
    "./src/ohos/junit/distribute/DistributeCmd.java",
    "./src/ohos/junit/distribute/DistributeCfg.java",
    "./src/ohos/junit/distribute/ICallBack.java",
    "./src/ohos/junit/distribute/ISocketObserver.java",
    "./src/ohos/junit/distribute/ISocketObservable.java",
    "./src/ohos/junit/distribute/ClientObserver.java",
    "./src/ohos/junit/distribute/DistributeMajor.java",
    "./src/ohos/junit/distribute/DistributeAgent.java",
  ]
  final_jar_path = "$root_out_dir/test_platform/libs/distribute_testfwk.jar"
  deps = [
    "//third_party/easymock:easymock_java",
    "//third_party/junit:junit_java",
  ]
}
group("java_test_tools") {
  deps = [ ":distribute_testfwk_java" ]
}
