# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/ohos/rules.gni")

java_library("test_app_shell_context_java") {
  emma_never_instrument = true
  java_files = [
    "//test/developertest/libs/jtr/shell/java/src/ohos/unittest/log/HiLogUtil.java",
  ]
  final_jar_path =
      "$root_out_dir/test_platform/libs/test_app_shell_context_java.jar"
  aosp_deps = [ "maple:framework" ]
  deps = []

  external_deps = [
    "ability:abilitykit_java",
    "hilog:hilog_java",
  ]

  external_deps += [
    "ability:abilitykit_java_maple",
    "hilog:hilog_maple_java",
  ]
}
